--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,8 @@ license = Perl_5
 copyright_holder = sunnavy@gmail.com
 
 [@Basic]
+[Repository]
+repository = git://github.com/sunnavy/module-starter-plugin-rtx.git
 [NextRelease]
     format = %-6v %{yyyy-MM-dd HH:mm:ss VV}d
 [MetaJSON]
